Fix: searchbar input field, better spacing

--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -55,23 +55,80 @@
   height: 90px;
   letter-spacing: 0;
   line-height:90.0px;
-  margin-top: -1.00px;
+ 
   position: relative;
   text-shadow: 0px 4px 4px #00000040;
   width: 403px;
 }
-
-.searchWrapper {
+.searchrapper {
   align-items: center;
-  align-self: stretch;
   display: flex;
-  flex: 1;
-  flex-grow: 1;
   justify-content: center;
   padding: 34px 24px;
   position: relative;
-  
+  width: 100%;
 }
+.inputrea {
+  margin-left: 2vw;
+  align-items: flex-start;
+  background-color: #fbf9d9;
+  border: 1px solid;
+  border-color: #8b6a16;
+  border-radius: 10px;
+  display: flex;
+  gap: 1vw;
+  padding: 1vw;
+  height: 4vh;
+  overflow: hidden;
+  position: relative;
+  width:100%;
+}
+
+.inputrea .searchbtn {
+  align-items: center;
+  display: inline-flex;
+  flex: 0 0 auto;
+  gap: 10px;
+  justify-content: center;
+
+  position: relative;
+}
+.inputrea .vectorz {
+  align-self: center;
+  height: 3vh;
+  width: auto;
+  position: relative;
+}
+
+
+.inputrea .inputareatextbox {
+  align-self: center;
+  flex: 1;
+  flex-grow: 1;
+  position: relative;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.inputrea .filterbutton {
+  align-items: center;
+  align-self: center;
+  display: inline-flex;
+  flex: 0 0 auto;
+  gap: 10px;
+  justify-content: center;
+  padding: 10px;
+  position: relative;
+}
+
+.inputrea .img {
+  height: auto;
+  align-self: top;
+  position: relative;
+  width: 4vh;
+}
+
 
 .searchbar {
   height: 65px;
@@ -198,9 +255,9 @@
 }
 
 .vector {
-  height: 25px;
+  height: auto;
   position: relative;
-  width: 25px;
+  width: auto;
 }
 
 .bottom {
